fix collapsing issues in safari

--- a/src/features/user/UserProfile/styles/MyTrees.module.scss
+++ b/src/features/user/UserProfile/styles/MyTrees.module.scss
@@ -47,6 +47,7 @@
   align-items: center;
   width: 100%;
   height: fit-content;
+  min-height: fit-content;
 }
 
 .dateRow {
@@ -160,5 +161,11 @@
 
   .mapContainer {
     height: 100%;
+  }
+}
+
+@include lgLaptopView {
+  .myTreesSection {
+    min-height: 600px;
   }
 }
